force-app/main/default/objects/Test_Script__c/Test_Script__c.object-meta.xml
<CustomObject>
    <description>Represents a UI test script to be executed by the Agentforce QA automation agent. Contains ordered test steps and configuration for the browser automation service.</description>
    <label>Test Script</label>
    <nameField>
        <label>Test Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>