force-app/main/default/objects/Test_Script__c/fields/Continue_On_Failure__c.field-meta.xml
<CustomField>
    <fullName>Continue_On_Failure__c</fullName>
    <description>When checked, the automation agent will continue executing remaining steps even if a step fails. Useful for scripts that need to capture all failures in a single run rather than stopping at the first issue.</description>
    <inlineHelpText>Check to run all steps even if some fail. Uncheck to stop immediately on the first failure (default).</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Continue On Failure</label>
    <type>Checkbox</type>
</CustomField>