force-app/main/default/objects/Test_Script__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this test script validates. Used by the AI agent as context when interpreting test steps.</description>
    <inlineHelpText>Describe what this test script is validating. The AI agent uses this as context when executing steps.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>