force-app/main/default/objects/Test_Script__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>The date and time when this test script was most recently executed. Automatically updated by the automation agent.</description>
    <inlineHelpText>Automatically updated after each test run.</inlineHelpText>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>