force-app/main/default/objects/Test_Script__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <description>The outcome of the most recent test run for this script. Automatically updated by the automation agent when a run completes.</description>
    <inlineHelpText>Automatically updated after each test run. Do not edit manually.</inlineHelpText>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Run</fullName>
                <default>true</default>
                <label>Not Run</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>