force-app/main/default/objects/Test_Script__c/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <description>The API name of the Salesforce Named Credential that points to the browser automation microservice for this script. If blank, the Test Suite value is used. Allows different scripts to target different browser service instances.</description>
    <inlineHelpText>Optional. Enter the API name of a Named Credential to override the Test Suite setting (e.g. Browser_Agent_Service_UAT). Leave blank to use the parent Test Suite value.</inlineHelpText>
    <label>Named Credential API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>