force-app/main/default/objects/Test_Script__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes for QA team members about this test script. Not passed to the AI agent during execution.</description>
    <inlineHelpText>Internal notes for your QA team. Not visible to the automation agent.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>