force-app/main/default/objects/Test_Script__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <description>The percentage of test runs that passed out of all completed runs for this script. Automatically calculated from related Test Run records.</description>
    <inlineHelpText>Percentage of runs that passed. Calculated automatically.</inlineHelpText>
    <label>Pass Rate (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>