force-app/main/default/objects/Test_Script__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Execution priority for this script when running as part of a Test Suite. High priority scripts run first. Used to ensure critical paths are tested before lower-priority flows.</description>
    <inlineHelpText>P1 = Critical (run first), P2 = High, P3 = Medium, P4 = Low (run last). Used when executing a full Test Suite.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Critical</fullName>
            </value>
            <value>
                <fullName>P2 - High</fullName>
                <default>true</default>
                <label>P2 - High</label>
            </value>
            <value>
                <fullName>P3 - Medium</fullName>
            </value>
            <value>
                <fullName>P4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>