force-app/main/default/objects/Test_Script__c/fields/Run_Script_As__c.field-meta.xml
<CustomField>
    <fullName>Run_Script_As__c</fullName>
    <description>The Salesforce user whose credentials and permissions the browser automation agent will use when executing this test script. Determines what the agent can see and interact with in the UI.</description>
    <inlineHelpText>Select the user the AI agent will log in as when running this test. The agent will see exactly what this user sees.</inlineHelpText>
    <label>Run Script As</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Scripts (Run As)</relationshipLabel>
    <relationshipName>Test_Scripts_Run_As</relationshipName>
    <type>Lookup</type>
</CustomField>