force-app/main/default/objects/Test_Script__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated tags for grouping and filtering test scripts. Examples: opportunity, lead-conversion, mobile, release-24.3</description>
    <inlineHelpText>Enter comma-separated tags to group scripts (e.g. opportunity, pipeline, sprint-12). Used for bulk filtering and scheduled runs.</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>