force-app/main/default/objects/Test_Script__c/fields/Target_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_Org_URL__c</fullName>
    <description>The Salesforce org URL the browser automation agent will navigate to when executing this test script. Should be the My Domain URL of the target sandbox or production org.</description>
    <inlineHelpText>Enter the full My Domain URL (e.g. https://mycompany--uat.sandbox.my.salesforce.com). Overrides the Test Suite default if provided.</inlineHelpText>
    <label>Target Org URL</label>
    <type>Url</type>
</CustomField>