force-app/main/default/objects/Test_Script__c/fields/Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Test_Suite__c</fullName>
    <description>The Test Suite this script belongs to. Determines default target org URL, Named Credential, and Run As user when not overridden at the script level.</description>
    <inlineHelpText>Assign this script to a suite to group it with related scripts and inherit suite-level settings.</inlineHelpText>
    <label>Test Suite</label>
    <referenceTo>Test_Suite__c</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>