force-app/main/default/objects/Test_Script__c/fields/Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Minutes__c</fullName>
    <description>Maximum number of minutes the browser automation agent is allowed to spend executing this entire script before timing out and marking the run as an Error.</description>
    <inlineHelpText>How long (in minutes) to allow before the test run times out. Default is 10 minutes. Increase for long multi-step scripts.</inlineHelpText>
    <defaultValue>10</defaultValue>
    <label>Timeout (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>