force-app/main/default/objects/Test_Script__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <description>The total number of Test Step records associated with this script. Used for progress tracking during execution and for reporting.</description>
    <inlineHelpText>Automatically calculated from related Test Steps.</inlineHelpText>
    <label>Total Steps</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>