force-app/main/default/objects/Test_Script__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorizes the kind of testing this script performs. Used for filtering, reporting, and scheduling test runs by category.</description>
    <inlineHelpText>Choose the test type: UAT for user acceptance, Regression for verifying existing features, Smoke for quick sanity checks, Functional for feature validation, or Integration for cross-system flows.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Smoke</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
                <default>true</default>
                <label>Functional</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>End-to-End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>